<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/sessing"
        android:layout_width="match_parent"
        android:layout_height="@dimen/set_item_height"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sessing"
            android:textSize="@dimen/set_text_size"
            android:textColor="@color/result_view"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cp_gray"></View>

    <LinearLayout
        android:id="@+id/cardBlance"
        android:layout_width="match_parent"
        android:layout_height="@dimen/set_item_height"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/CardBalance"
            android:textSize="@dimen/set_text_size"
            android:textColor="@color/result_view"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cp_gray"></View>

    <LinearLayout
        android:id="@+id/versionUpdate"
        android:layout_width="match_parent"
        android:layout_height="@dimen/set_item_height"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/versionUpdate"
            android:textSize="@dimen/set_text_size"
            android:textColor="@color/result_view"/>
        <TextView
            android:id="@+id/tv_current_version"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="(当前版本: v1.1.2)"
            android:textSize="@dimen/fab_margin"
            android:textColor="@color/gray_deep"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cp_gray"></View>

    <LinearLayout
        android:id="@+id/outHome"
        android:layout_width="match_parent"
        android:layout_height="@dimen/set_item_height"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/out"
            android:textSize="@dimen/set_text_size"
            android:textColor="@color/result_view"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cp_gray"></View>
</LinearLayout>
