<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ScrollView
        android:layout_above="@+id/commit"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/parkingSpotId"
                    android:gravity="center"
                    android:id="@+id/textView"
                    android:textSize="20sp"
                    android:textColor="@color/gray_deep"/>

                <EditText
                    android:id="@+id/parkingSpotId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/platformId"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/gray_deep"/>
                <EditText
                    android:id="@+id/platId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/opentime"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/gray_deep"/>
                <EditText
                    android:id="@+id/opentime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_marginBottom="3dp"
                android:layout_width="match_parent"
                android:layout_height="60dp">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:text="@string/price"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:textColor="@color/gray_deep"/>
                <EditText
                    android:id="@+id/price"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <Button
        android:layout_alignParentBottom="true"
        android:id="@+id/commit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="确定"
        />
</RelativeLayout>
